@@ -20,6 +20,10 @@ module Thin
     RUBY_PLATFORM =~ /mswin/
   end
   
+  def self.linux?
+    RUBY_PLATFORM =~ /linux/
+  end
+  
   def self.ruby_18?
     RUBY_VERSION =~ /^1\.8/
   end
